--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(JeuDePingMEJ)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(JeuDePingMEJ main.cpp Ping.cpp Ping.h)
+add_executable(JeuDePingMEJ main.cpp Ping.cpp Ping.h TABLEAU.cpp TABLEAU.h)
